--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "git@github.com:jackfranklin/nodefetch.git"
   },
   "dependencies": {
-    "request": "~2.10.0"
+    "request": "~2.10.0",
+    "shelljs": "0.0.6"
   }
 }
