--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "request": "~2.10.0",
-    "shelljs": "0.0.6"
+    "shelljs": "0.0.6",
+    "minitestwrap": "~0.1.1"
   }
 }
