--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "dependencies": {
     "request": "~2.10.0",
     "shelljs": "0.0.6",
-    "minitestwrap": "~0.1.1"
+    "minitestwrap": "~0.1.1",
   }
 }
