--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodefetch",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Fetch popular web libraries from the net",
   "preferGlobal": "true",
   "bin": {
@@ -18,5 +18,6 @@
     "request": "~2.10.0",
     "shelljs": "0.0.6",
     "minitestwrap": "~0.1.1",
+    "unzip": "0.0.3"
   }
 }
