--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "request": "~2.10.0",
     "shelljs": "0.0.6",
     "unzip": "0.0.3",
-    "pulldown-resolve": "0.0.1"
+    "pulldown-resolve": "0.0.3",
+    "pulldown-middle-man": "0.0.1"
   }
 }
