Don't download the same file more than once if we can avoid it

--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "unzip": "0.0.3",
     "pulldown-resolve": "0.0.7",
     "pulldown-middle-man": "0.0.1",
-    "optimist": "~0.4.0"
+    "optimist": "~0.4.0",
+    "async": "~0.2.8",
+    "underscore": "~1.4.4"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
