--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "request": "~2.10.0",
     "shelljs": "0.0.6",
-    "unzip": "0.0.3",
+    "unzip": "~0.1.7",
     "pulldown-resolve": "0.0.7",
     "pulldown-middle-man": "0.0.1",
     "optimist": "~0.4.0",
