--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "mocha": "~1.10.0",
-    "sinon": "~1.7.2"
+    "sinon": "~1.7.2",
+    "rimraf": "~2.2.0"
   }
 }
