--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pulldown-middle-man": "0.0.1",
     "optimist": "~0.4.0",
     "async": "~0.2.8",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "update-notifier": "~0.1.5"
   },
   "devDependencies": {
     "mocha": "~1.10.0",
