dont need the extra 5000ms timeout on tests anymore

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pulldown": "pulldown.js"
   },
   "scripts": {
-    "test": "mocha -t 5000"
+    "test": "mocha"
   },
   "author": "Jack Franklin",
   "engines": {
