--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulldown",
-  "version": "1.0.0-rc",
+  "version": "1.0.0",
   "description": "Fetch popular web libraries from the net",
   "preferGlobal": "true",
   "bin": {
