--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "request": "~2.10.0",
     "shelljs": "0.0.6",
     "unzip": "~0.1.8",
-    "pulldown-resolve": "0.0.7",
+    "pulldown-resolve": "~0.1.2",
     "pulldown-middle-man": "0.1.0",
     "async": "~0.2.8",
     "underscore": "~1.4.4",
