--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "underscore": "~1.4.4",
     "chalk": "~0.2.0",
     "update-notifier": "~0.1.5",
-    "optimist": "~0.6.0"
+    "yargs": "~1.1.3"
   },
   "devDependencies": {
     "mocha": "~1.10.0",
