--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "shelljs": "0.0.6",
     "unzip": "~0.1.8",
     "pulldown-resolve": "~0.1.2",
-    "pulldown-middle-man": "0.1.0",
     "async": "~0.2.8",
     "underscore": "~1.4.4",
     "chalk": "~0.2.0",
     "update-notifier": "~0.1.5",
-    "yargs": "~1.1.3"
+    "yargs": "~1.1.3",
+    "pulldown-middle-man": "^0.2.0"
   },
   "devDependencies": {
     "mocha": "~1.10.0",
