--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "chalk": "~0.2.0",
     "update-notifier": "~0.1.5",
     "yargs": "~1.1.3",
-    "pulldown-middle-man": "^0.2.0"
+    "pulldown-middle-man": "0.2.0"
   },
   "devDependencies": {
     "mocha": "~1.10.0",
