--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
     "url": "git@github.com:jackfranklin/pulldown.git"
   },
   "dependencies": {
-    "request": "~2.10.0",
+    "request": "2.10.0",
     "shelljs": "0.0.6",
-    "unzip": "~0.1.8",
-    "pulldown-resolve": "~0.1.2",
-    "async": "~0.2.8",
-    "underscore": "~1.4.4",
-    "chalk": "~0.2.0",
-    "update-notifier": "~0.1.5",
-    "yargs": "~1.1.3",
+    "unzip": "0.1.8",
+    "pulldown-resolve": "0.1.2",
+    "async": "0.2.8",
+    "underscore": "1.4.4",
+    "chalk": "0.2.0",
+    "update-notifier": "0.1.5",
+    "yargs": "1.1.3",
     "pulldown-middle-man": "0.2.0"
   },
   "devDependencies": {
-    "mocha": "~1.10.0",
-    "sinon": "~1.7.2",
-    "rimraf": "~2.2.0",
-    "nock": "~0.22.1",
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-simple-mocha": "~0.4.0"
+    "mocha": "1.10.0",
+    "sinon": "1.7.2",
+    "rimraf": "2.2.0",
+    "nock": "0.22.1",
+    "grunt": "0.4.1",
+    "grunt-contrib-jshint": "0.6.3",
+    "grunt-simple-mocha": "0.4.0"
   }
 }
